[gd_scene load_steps=7 format=3 uid="uid://bx26gd1k7i7dh"]

[ext_resource type="Script" path="res://scripts/custom_player.gd" id="1_47tp6"]
[ext_resource type="Script" path="res://scripts/vehicle_node.gd" id="2_r0we5"]
[ext_resource type="PackedScene" uid="uid://bx0qitjfclvln" path="res://scenes/vehicle_parts/interceptor_body.tscn" id="3_20mr8"]
[ext_resource type="PackedScene" uid="uid://bp4ieysv35l35" path="res://scenes/vehicle_parts/basic_chassis.tscn" id="4_nb5vo"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ga088"]
friction = 0.8
bounce = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_42je6"]
radius = 1.0

[node name="custom_vehicle_1" type="Node3D"]
script = ExtResource("2_r0we5")

[node name="custom_vehicle_1_pb" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
physics_material_override = SubResource("PhysicsMaterial_ga088")
gravity_scale = 5.0
angular_velocity = Vector3(0, 0, 0.872665)
angular_damp = 15.0
script = ExtResource("1_47tp6")
debug = true

[node name="custom_vehicle_1_pb" type="CollisionShape3D" parent="custom_vehicle_1_pb"]
shape = SubResource("SphereShape3D_42je6")

[node name="vehicle_node" type="Node3D" parent="."]

[node name="body_node" type="Node3D" parent="vehicle_node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="interceptor_body" parent="vehicle_node/body_node" instance=ExtResource("3_20mr8")]
transform = Transform3D(0.5, 0, 0, 0, 0.498097, -0.0278898, 0, 0.0435779, 0.318782, 0, -7.45058e-09, 0)

[node name="chassis_node" type="Node3D" parent="vehicle_node"]

[node name="basic_chassis" parent="vehicle_node/chassis_node" instance=ExtResource("4_nb5vo")]

[node name="RayCast3D" type="RayCast3D" parent="vehicle_node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
